--- a/css/estilos_practicante.css
+++ b/css/estilos_practicante.css
@@ -97,3 +97,11 @@
   .posicion{
     margin-left: 340px;
   }
+  .estilo-card {
+    width: 300px;
+    height: 200px;
+    background-color: white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    padding: 20px;
+}
