--- a/css/estilos_practicante.css
+++ b/css/estilos_practicante.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@700&family=Poppins:wght@200;500&family=Roboto+Mono:ital,wght@1,100&display=swap');
 /*MENU BAR PRACTICANTE*/
 /*SIDEBAR*/
+.nav-modelo{
+  margin-left: 150px;
+}
 .color-menubar-practicante{
     background-color: #1e3d8f;
   }
@@ -75,6 +78,16 @@
     border-radius: 0 10px 10px 0;
   }
   /*NAVBAR*/
+  .aside-modelo{
+    position: fixed; 
+    top: 0; 
+    left: 0; 
+    height: 100vh; 
+    width: 150px; 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: space-between;
+  }
   .diseño-escribir-aqui{
     width: 500px;
     margin-left: 50px;
@@ -153,4 +166,110 @@
 
 
 
+/*pantallas*/
+/* Estilos generales aquí */
 
+@media (max-width: 768px) {
+  .nav-modelo {
+    margin-left: 0;
+  }
+  .posicion {
+    margin-left: 100px;
+  }
+  .diseño-escribir-aqui {
+    justify-content: center;
+    width: auto;
+  }
+  .posicion-perfil {
+    margin-left: 20px;
+  }
+  .aside-modelo{
+    position: static;
+    margin-left: 230px;
+    top: unset;
+    left: unset;
+    width: 100%;
+    justify-content: initial;
+    height: initial;
+  }
+  .main-sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+    min-height: 0;
+  }
+ 
+  .nav-items {
+    margin-left: 22%;
+    margin-right: 20%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+  }
+  .nav-items a {
+    margin: 5px;
+  }
+  .salir{
+    margin-top: 15px;
+  }
+  .navbar>.container-fluid{
+    justify-content: center;
+  }
+}
+
+@media (min-width: 767px) and (max-width: 1023px) {
+  .nav-modelo {
+    margin-left: 0;
+  }
+  .posicion {
+    margin-left: 100px;
+  }
+  .diseño-escribir-aqui {
+    justify-content: center;
+    width: auto;
+  }
+  .posicion-perfil {
+    margin-left: 20px;
+  }
+  .aside-modelo{
+    position: static;
+    margin-left: 0;
+    top: unset;
+    left: unset;
+    width: 100%;
+    justify-content: initial;
+    height: initial;
+  }
+  .main-sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+    min-height: 0;
+  }
+ 
+  .nav-items {
+    margin-left: 25%;
+    margin-right: 12%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+  }
+  .nav-items a {
+    margin: 5px;
+  }
+  .salir{
+    margin-top: 15px;
+  }
+  .navbar>.container-fluid{
+    justify-content: center;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 2560px) {
+  .posicion{
+    margin-left: 25%;
+    margin-right: 5%;
+  }
+}
