--- a/css/estilos.css
+++ b/css/estilos.css
@@ -311,6 +311,7 @@ body{
   transition: .3s;
   top: -20px;
   color: #1e3d8f;
+  margin: 10px;
 }
 .btn_perfil-estadisticas:hover{
   background-color: #5eb130;
