AÑADI CARD DE PERFIL PRACTICANTE

--- a/css/estilos_practicante.css
+++ b/css/estilos_practicante.css
@@ -1,153 +1,217 @@
-@import url("https://fonts.googleapis.com/css2?family=Kalam:wght@700&family=Poppins:wght@200;500&family=Roboto+Mono:ital,wght@1,100&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@700&family=Poppins:wght@200;500&family=Roboto+Mono:ital,wght@1,100&display=swap');
 /*MENU BAR PRACTICANTE*/
 /*SIDEBAR*/
-.nav-modelo {
+.nav-modelo{
   margin-left: 150px;
 }
-.color-menubar-practicante {
-  background-color: #1e3d8f;
-}
-.siderbar-practicantes {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.icono-centrar {
-  display: block;
-  margin: 0 auto;
-  justify-content: center;
-  align-items: center;
-}
-.logo {
-  background-color: white;
-  overflow: hidden;
-  border-radius: 50%;
-}
-.enlaces {
-  text-decoration: none;
-}
-.letraNavBar {
-  font-family: "Poppins", sans-serif;
-}
-.btn_justify {
-  position: absolute;
-  color: #fff;
-  left: 3%;
-  top: 6px;
-  font-size: 20px;
-  height: 50px;
-  width: 50px;
-  text-align: center;
-  line-height: 50px;
-}
-.nav-items {
-  position: relative;
-}
+.color-menubar-practicante{
+    background-color: #1e3d8f;
+  }
+  .siderbar-practicantes {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .icono-centrar{
+    display: block;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+  }
+  .logo {
+    background-color: white;
+    overflow: hidden;
+    border-radius: 50%;
+  }
+  .enlaces{
+    text-decoration:none; 
+  }
+  .letraNavBar{
+    font-family: 'Poppins', sans-serif;
+  }
+  .btn_justify{
+    position: absolute;
+      color: #fff;
+      left: 3%;
+      top: 6px;
+      font-size: 20px;
+      height: 50px;
+      width: 50px;
+      text-align: center;
+      line-height: 50px;
+  }
+  .nav-items {
+    position: relative;
+  }
+  
+  .nav-items > a {
+    display: block;
+    position: relative;
+    margin-bottom: 10px;
+  }
+  
+  .nav-items > a:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-color: #5EB130;
+    z-index: -1;
+    transition: opacity 0.3s ease;
+    transform: scale(1);
+    transform-origin: top left;
+    border-radius: 0 10px 10px 0;
+  }
+  
+  .nav-items > a:hover:before {
+    opacity: 1;
+    transform: scale(1.07);
+  }
+  .enlaces.clicked {
+    background-color: #5EB130;
+    opacity: 1;
+    transform: scale(1.07);
+    transform-origin: top left;
+    border-radius: 0 10px 10px 0;
+  }
+  /*NAVBAR*/
+  .aside-modelo{
+    position: fixed; 
+    top: 0; 
+    left: 0; 
+    height: 100vh; 
+    width: 150px; 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: space-between;
+  }
+  .diseño-escribir-aqui{
+    width: 500px;
+    margin-left: 50px;
+    margin-top: 15px;
+  }
+  .diseño-escribir-aqui input{
+    border-radius: 15px 15px 15px 15px;
+  }
+  .diseño-escribir-aqui span{
+    background-color: #1e3d8f;
+    border-radius: 15px 15px 15px 15px;
+  }
+  .bg-nav{
+    background-color: #5EB130;
+  }
+  .posicion-fecha{
+    margin-top: 10px;
+    color: white;
+  }
+  .posicion{
+    margin-left: 340px;
+  }
 
-.nav-items > a {
-  display: block;
-  position: relative;
-  margin-bottom: 10px;
-}
+  /* USO DEL GRID PARA ORGANIZAR Y ESTRUCTURAR LA ETIQUETA DIV CON ID GRID-PERFIL*/
+  #grid-perfil{
+    display: grid;
+    grid-template-columns: .1fr .7fr;
+    grid-template-rows: .1fr auto auto auto; 
+    grid-template-areas: "perfil estadistica-desempeño"
+                         "estado estadistica-desempeño"
+                         "estado logros"; 
+    gap: 20px;
+  }
+  #perfil{
+    grid-area: perfil;
+  }
+  #estadistica-desempeño{
+    grid-area: estadistica-desempeño;
+  }
+  #estado{
+    grid-area: estado;
+  }
+  #logros{
+    grid-area: logros;
+  }
 
-.nav-items > a:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  background-color: #5eb130;
-  z-index: -1;
-  transition: opacity 0.3s ease;
-  transform: scale(1);
-  transform-origin: top left;
-  border-radius: 0 10px 10px 0;
-}
+  /*CARD PERFIL*/
 
-.nav-items > a:hover:before {
-  opacity: 1;
-  transform: scale(1.07);
+  .tarjeta-perfil div h2{
+    padding-left: 30px;
+    padding-top: 14px;
+    margin-bottom: 0;
+    height: 44px;
+  }
+  .tarjeta-perfil div p{
+    padding-left: 30px;
+    font-size: 10px;
+    margin-top: 8px;
+    width: 380px;
+    margin-bottom: 8px;
+  }
+  .perfil-presentacion{
+    padding-top: 0px;
+    padding-left: 25px;
+  }
+  .perfil-presentacion2{
+    padding-left: 25px;
+  }
+  .perfil-contrato{
+    padding-left: 25px;
+  }
+  .estilo-card {
+    width: 300px;
+    height: 200px;
+    background-color: white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 30px;
+    padding: 20px;
 }
-.enlaces.clicked {
-  background-color: #5eb130;
-  opacity: 1;
-  transform: scale(1.07);
-  transform-origin: top left;
-  border-radius: 0 10px 10px 0;
-}
-/*NAVBAR*/
-.aside-modelo {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 150px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.diseño-escribir-aqui {
-  width: 500px;
-  margin-left: 50px;
-  margin-top: 15px;
-}
-.diseño-escribir-aqui input {
-  border-radius: 15px 15px 15px 15px;
-}
-.diseño-escribir-aqui span {
-  background-color: #1e3d8f;
-  border-radius: 15px 15px 15px 15px;
-}
-.bg-nav {
-  background-color: #5eb130;
-}
-.posicion-fecha {
-  margin-top: 10px;
-  color: white;
-}
-.posicion {
-  margin-left: 340px;
-}
-.estilo-card {
-  width: 300px;
-  height: 200px;
-  background-color: white;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  border-radius: 30px;
-  padding: 20px;
-}
-.estilo-card-perfil {
-  width: 750px;
+.estilo-card-perfil{
+  width: 600px;
   height: 180px;
   background-image: url("../images/cielo.webp");
-  border-radius: 30px;
+  border-radius: 10px;
 }
-.colorletraperfil {
+.colorletraperfil{
   color: #1e3d8f;
 }
-.diseñofechaingresoysalidad {
+.diseñoFechaIngreso{
+  font-size: 18px;
   color: white;
   background-color: #1e3d8f;
-  height: 20px;
   width: 80px;
   border-radius: 3px;
+  text-align: center;
+  height: 24px;
 }
-.diseñofecha {
+.diseñoFechaSalida{
+  font-size: 18px;
+  color: white;
+  background-color: #1e3d8f;
+  width: 73px;
+  border-radius: 3px;
+  margin-left: 20px;
+  text-align: center;
+  height: 24px;
+}
+.diseñofecha{
   color: #1e3d8f;
   background-color: white;
   border-color: #1e3d8f;
   border-width: thick;
-  height: 20px;
+  height: 17px;
   width: 25px;
+  font-size: 14px;
 }
 
 .contenedor-fecha {
   border: 1.5px solid #1e3d8f;
-  height: 22.28572px;
-  background-color: #ddeaff;
+  height: 18.6px;
+  width: 81.6px;
+  background-color: #DDEAFF;
   padding-left: 0 !important;
+  margin-top: 2px;
 }
 .posicion-border1 {
   align-items: center;
@@ -162,6 +226,36 @@
   align-items: center;
   border-right: 1.5px solid #1e3d8f;
 }
+.perfil-yuntas{
+  margin-top: -12px;
+  padding: 32px;
+}
+/*OTRO DISEÑO*/
+.card {
+  width: 300px;
+  height: 200px;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  padding: 20px;
+}
+
+/*CARD ESTADISTICA DESEMPEÑO*/
+.perfil-estadistica-desempeño{
+  width: 541.6px;
+  height: 341.6px;
+}
+/*CARD ESTADO PERFIL */
+.perfil-estado-perfil{
+  width: 600px;
+  height: 501.6px;
+}
+/*CARD LOGROS*/
+.perfil-logros{
+  width: 541.6px;
+  height: 341.6px;
+}
+
 
 /* Calendario Practicante */
 .buttons {
@@ -194,7 +288,7 @@
   .posicion-perfil {
     margin-left: 20px;
   }
-  .aside-modelo {
+  .aside-modelo{
     position: static;
     margin-left: 230px;
     top: unset;
@@ -210,7 +304,7 @@
     padding-top: 20px;
     min-height: 0;
   }
-
+ 
   .nav-items {
     margin-left: 22%;
     margin-right: 20%;
@@ -221,10 +315,10 @@
   .nav-items a {
     margin: 5px;
   }
-  .salir {
+  .salir{
     margin-top: 15px;
   }
-  .navbar > .container-fluid {
+  .navbar>.container-fluid{
     justify-content: center;
   }
 }
@@ -243,7 +337,7 @@
   .posicion-perfil {
     margin-left: 20px;
   }
-  .aside-modelo {
+  .aside-modelo{
     position: static;
     margin-left: 0;
     top: unset;
@@ -259,7 +353,7 @@
     padding-top: 20px;
     min-height: 0;
   }
-
+ 
   .nav-items {
     margin-left: 25%;
     margin-right: 12%;
@@ -270,16 +364,16 @@
   .nav-items a {
     margin: 5px;
   }
-  .salir {
+  .salir{
     margin-top: 15px;
   }
-  .navbar > .container-fluid {
+  .navbar>.container-fluid{
     justify-content: center;
   }
 }
 
 @media (min-width: 1024px) and (max-width: 2560px) {
-  .posicion {
+  .posicion{
     margin-left: 25%;
     margin-right: 5%;
   }
