Mostrar datos del practicante
Mostrar datos del practicante en la seccion de mi perfill

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -316,6 +316,9 @@ body{
 .btn_perfil-estadisticas:hover{
   background-color: #5eb130;
 }
+.form__ver-perfil{
+  padding-top: 10px;
+}
 .asistencia-sep{
   margin: 0;
   padding: 0;
