--- a/css/estilos_practicante.css
+++ b/css/estilos_practicante.css
@@ -176,7 +176,13 @@
   color: white;
   margin: 0 25px;
 }
-
+.enlaces__btn{
+  background-color: rgba(255, 255, 255, 0);
+  outline: none;
+  border: none;
+  width: 100%;
+  margin-top: 5px;
+}
 /*pantallas*/
 /* Estilos generales aquí */
 
