Funcionamiento de boton salir
Hice que el boton salir funcione, ademas que se pueda ingreasr al persil del practicante sin la necesidad de marcar asistencia

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -311,9 +311,13 @@ body{
   transition: .3s;
   top: -20px;
   color: #1e3d8f;
+  margin: 10px;
 }
 .btn_perfil-estadisticas:hover{
   background-color: #5eb130;
+}
+.form__ver-perfil{
+  padding-top: 10px;
 }
 .asistencia-sep{
   margin: 0;
