--- a/css/estilos_practicante.css
+++ b/css/estilos_practicante.css
@@ -1,189 +1,190 @@
-@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@700&family=Poppins:wght@200;500&family=Roboto+Mono:ital,wght@1,100&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Kalam:wght@700&family=Poppins:wght@200;500&family=Roboto+Mono:ital,wght@1,100&display=swap");
 /*MENU BAR PRACTICANTE*/
 /*SIDEBAR*/
-.nav-modelo{
+.nav-modelo {
   margin-left: 150px;
 }
-.color-menubar-practicante{
-    background-color: #1e3d8f;
-  }
-  .siderbar-practicantes {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .icono-centrar{
-    display: block;
-    margin: 0 auto;
-    justify-content: center;
-    align-items: center;
-  }
-  .logo {
-    background-color: white;
-    overflow: hidden;
-    border-radius: 50%;
-  }
-  .enlaces{
-    text-decoration:none; 
-  }
-  .letraNavBar{
-    font-family: 'Poppins', sans-serif;
-  }
-  .btn_justify{
-    position: absolute;
-      color: #fff;
-      left: 3%;
-      top: 6px;
-      font-size: 20px;
-      height: 50px;
-      width: 50px;
-      text-align: center;
-      line-height: 50px;
-  }
-  .nav-items {
-    position: relative;
-  }
-  
-  .nav-items > a {
-    display: block;
-    position: relative;
-    margin-bottom: 10px;
-  }
-  
-  .nav-items > a:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    background-color: #5EB130;
-    z-index: -1;
-    transition: opacity 0.3s ease;
-    transform: scale(1);
-    transform-origin: top left;
-    border-radius: 0 10px 10px 0;
-  }
-  
-  .nav-items > a:hover:before {
-    opacity: 1;
-    transform: scale(1.07);
-  }
-  .enlaces.clicked {
-    background-color: #5EB130;
-    opacity: 1;
-    transform: scale(1.07);
-    transform-origin: top left;
-    border-radius: 0 10px 10px 0;
-  }
-  .enlaces__btn{
-    background-color: rgba(255, 255, 255, 0);
-    outline: none;
-    border: none;
-    width: 100%;
-    margin-top: 5px;
-  }
-  /*NAVBAR*/
-  .aside-modelo{
-    position: fixed; 
-    top: 0; 
-    left: 0; 
-    height: 100vh; 
-    width: 150px; 
-    display: flex; 
-    flex-direction: column; 
-    justify-content: space-between;
-  }
-  .diseño-escribir-aqui{
-    width: 500px;
-    margin-left: 50px;
-    margin-top: 15px;
-  }
-  .diseño-escribir-aqui input{
-    border-radius: 15px 15px 15px 15px;
-  }
-  .diseño-escribir-aqui span{
-    background-color: #1e3d8f;
-    border-radius: 15px 15px 15px 15px;
-  }
-  .bg-nav{
-    background-color: #5EB130;
-  }
-  .posicion-fecha{
-    margin-top: 10px;
-    color: white;
-  }
-  .posicion{
-    margin-left: 340px;
-  }
-
-  /* USO DEL GRID PARA ORGANIZAR Y ESTRUCTURAR LA ETIQUETA DIV CON ID GRID-PERFIL*/
-  #grid-perfil{
-    display: grid;
-    grid-template-columns: .1fr .7fr;
-    grid-template-rows: .1fr auto auto auto; 
-    grid-template-areas: "perfil estadistica-desempeño"
-                         "estado estadistica-desempeño"
-                         "estado logros"; 
-    gap: 20px;
-  }
-  #perfil{
-    grid-area: perfil;
-  }
-  #estadistica-desempeño{
-    grid-area: estadistica-desempeño;
-  }
-  #estado{
-    grid-area: estado;
-  }
-  #logros{
-    grid-area: logros;
-  }
-
-  /*CARD PERFIL*/
-
-  .tarjeta-perfil div h2{
-    padding-left: 30px;
-    padding-top: 14px;
-    margin-bottom: 0;
-    height: 44px;
-  }
-  .tarjeta-perfil div p{
-    padding-left: 30px;
-    font-size: 10px;
-    margin-top: 8px;
-    width: 380px;
-    margin-bottom: 8px;
-  }
-  .perfil-presentacion{
-    padding-top: 0px;
-    padding-left: 25px;
-  }
-  .perfil-presentacion2{
-    padding-left: 25px;
-  }
-  .perfil-contrato{
-    padding-left: 25px;
-  }
-  .estilo-card {
-    width: 300px;
-    height: 200px;
-    background-color: white;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 30px;
-    padding: 20px;
+.color-menubar-practicante {
+  background-color: #1e3d8f;
 }
-.estilo-card-perfil{
+.siderbar-practicantes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.icono-centrar {
+  display: block;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+}
+.logo {
+  background-color: white;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.enlaces {
+  text-decoration: none;
+}
+.letraNavBar {
+  font-family: "Poppins", sans-serif;
+}
+.btn_justify {
+  position: absolute;
+  color: #fff;
+  left: 3%;
+  top: 6px;
+  font-size: 20px;
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  line-height: 50px;
+}
+.nav-items {
+  position: relative;
+}
+
+.nav-items > a {
+  display: block;
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.nav-items > a:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background-color: #5eb130;
+  z-index: -1;
+  transition: opacity 0.3s ease;
+  transform: scale(1);
+  transform-origin: top left;
+  border-radius: 0 10px 10px 0;
+}
+
+.nav-items > a:hover:before {
+  opacity: 1;
+  transform: scale(1.07);
+}
+.enlaces.clicked {
+  background-color: #5eb130;
+  opacity: 1;
+  transform: scale(1.07);
+  transform-origin: top left;
+  border-radius: 0 10px 10px 0;
+}
+.enlaces__btn {
+  background-color: rgba(255, 255, 255, 0);
+  outline: none;
+  border: none;
+  width: 100%;
+  margin-top: 5px;
+}
+/*NAVBAR*/
+.aside-modelo {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.diseño-escribir-aqui {
+  width: 500px;
+  margin-left: 50px;
+  margin-top: 15px;
+}
+.diseño-escribir-aqui input {
+  border-radius: 15px 15px 15px 15px;
+}
+.diseño-escribir-aqui span {
+  background-color: #1e3d8f;
+  border-radius: 15px 15px 15px 15px;
+}
+.bg-nav {
+  background-color: #5eb130;
+}
+.posicion-fecha {
+  margin-top: 10px;
+  color: white;
+}
+.posicion {
+  margin-left: 340px;
+}
+
+/* USO DEL GRID PARA ORGANIZAR Y ESTRUCTURAR LA ETIQUETA DIV CON ID GRID-PERFIL*/
+#grid-perfil {
+  display: grid;
+  grid-template-columns: 0.1fr 0.7fr;
+  grid-template-rows: 0.1fr auto auto auto;
+  grid-template-areas:
+    "perfil estadistica-desempeño"
+    "estado estadistica-desempeño"
+    "estado logros";
+  gap: 20px;
+}
+#perfil {
+  grid-area: perfil;
+}
+#estadistica-desempeño {
+  grid-area: estadistica-desempeño;
+}
+#estado {
+  grid-area: estado;
+}
+#logros {
+  grid-area: logros;
+}
+
+/*CARD PERFIL*/
+
+.tarjeta-perfil div h2 {
+  padding-left: 30px;
+  padding-top: 14px;
+  margin-bottom: 0;
+  height: 44px;
+}
+.tarjeta-perfil div p {
+  padding-left: 30px;
+  font-size: 10px;
+  margin-top: 8px;
+  width: 380px;
+  margin-bottom: 8px;
+}
+.perfil-presentacion {
+  padding-top: 0px;
+  padding-left: 25px;
+}
+.perfil-presentacion2 {
+  padding-left: 25px;
+}
+.perfil-contrato {
+  padding-left: 25px;
+}
+.estilo-card {
+  width: 300px;
+  height: 200px;
+  background-color: white;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 30px;
+  padding: 20px;
+}
+.estilo-card-perfil {
   width: 600px;
   height: 180px;
   background-image: url("../images/cielo.webp");
   border-radius: 10px;
 }
-.colorletraperfil{
+.colorletraperfil {
   color: #1e3d8f;
 }
-.diseñoFechaIngreso{
+.diseñoFechaIngreso {
   font-size: 18px;
   color: white;
   background-color: #1e3d8f;
@@ -192,7 +193,7 @@
   text-align: center;
   height: 24px;
 }
-.diseñoFechaSalida{
+.diseñoFechaSalida {
   font-size: 18px;
   color: white;
   background-color: #1e3d8f;
@@ -202,7 +203,7 @@
   text-align: center;
   height: 24px;
 }
-.diseñofecha{
+.diseñofecha {
   color: #1e3d8f;
   background-color: white;
   border-color: #1e3d8f;
@@ -216,7 +217,7 @@
   border: 1.5px solid #1e3d8f;
   height: 18.6px;
   width: 81.6px;
-  background-color: #DDEAFF;
+  background-color: #ddeaff;
   padding-left: 0 !important;
   margin-top: 2px;
 }
@@ -233,7 +234,7 @@
   align-items: center;
   border-right: 1.5px solid #1e3d8f;
 }
-.perfil-yuntas{
+.perfil-yuntas {
   margin-top: -12px;
   padding: 32px;
 }
@@ -244,90 +245,89 @@
   border-radius: 12px;
   padding: 20px;
 }
-.colorlinea{
+.colorlinea {
   color: #1e3d8f;
   border-width: 2px;
 }
 
-
 /*CARD ESTADISTICA DESEMPEÑO*/
-.perfil-estadistica-desempeño{
+.perfil-estadistica-desempeño {
   width: 461.6px;
   height: 341.6px;
 }
-#estadistica-desempeño div div p{
+#estadistica-desempeño div div p {
   font-size: 12px;
 }
-#estadistica-desempeño div div h6{
+#estadistica-desempeño div div h6 {
   margin-bottom: 0;
 }
-.ver-mas{
+.ver-mas {
   padding-left: 97px;
   padding-top: 9px;
 }
 /*CARD ESTADO PERFIL */
-.perfil-estado-perfil{
+.perfil-estado-perfil {
   width: 600px;
   height: 501.6px;
 }
-#estados-evaluados div img{
+#estados-evaluados div img {
   width: 30px;
   height: 30px;
 }
-#estados-evaluados div p{
+#estados-evaluados div p {
   font-size: 15px;
   padding-left: 10px;
   padding-top: 2px;
 }
-#estados-evaluados div .icono-estado{
+#estados-evaluados div .icono-estado {
   width: 24px;
   height: 30px;
 }
 
-.progress-circular{
+.progress-circular {
   position: relative;
   width: 110px;
   height: 110px;
   border-radius: 50%;
-  background: conic-gradient(#D9D9D9 180deg,#00D7C9 0deg);
+  background: conic-gradient(#d9d9d9 180deg, #00d7c9 0deg);
   display: flex;
   justify-content: center;
   align-items: center;
   margin-left: 50px;
 }
-.progress-circular::after{
+.progress-circular::after {
   position: absolute;
-  content: '';
+  content: "";
   width: 90px;
   height: 90px;
   border-radius: 50%;
   background: #fff;
 }
-.progress-circular2{
+.progress-circular2 {
   position: relative;
   width: 110px;
   height: 110px;
   border-radius: 50%;
-  background: conic-gradient(#D9D9D9 180deg,#FF0000 0deg);
+  background: conic-gradient(#d9d9d9 180deg, #ff0000 0deg);
   display: flex;
   justify-content: center;
   align-items: center;
   margin-left: 50px;
 }
-.progress-circular2::after{
+.progress-circular2::after {
   position: absolute;
-  content: '';
+  content: "";
   width: 90px;
   height: 90px;
   border-radius: 50%;
   background: #fff;
 }
-.value{
+.value {
   padding: 19px;
   padding-top: 14px;
   padding-bottom: 12px;
   padding-left: 19px;
-  border: 1px solid #D9D9D9;
+  border: 1px solid #d9d9d9;
   border-radius: 50%;
   font-size: 25px;
   font-weight: 500;
@@ -337,12 +337,12 @@
   align-items: center;
   text-align: center;
 }
-.value2{
+.value2 {
   padding: 29px;
   padding-top: 14px;
   padding-bottom: 10px;
   padding-left: 29px;
-  border: 1px solid #D9D9D9;
+  border: 1px solid #d9d9d9;
   border-radius: 50%;
   font-size: 25px;
   font-weight: 500;
@@ -352,62 +352,62 @@
   align-items: center;
   text-align: center;
 }
-.letra-pequena{
+.letra-pequena {
   font-size: 10px;
   font-weight: 500;
 }
-#estados-evaluados{
+#estados-evaluados {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr; 
-  grid-template-areas: "estado-1 estado-2"
-                       "estado-3 estado-4";
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas:
+    "estado-1 estado-2"
+    "estado-3 estado-4";
   gap: 40px;
-
 }
-#estado-1{
+#estado-1 {
   grid-area: estado-1;
 }
-#estado-2{
+#estado-2 {
   grid-area: estado-2;
 }
-#estado-3{
+#estado-3 {
   grid-area: estado-3;
 }
-#estado-4{
+#estado-4 {
   grid-area: estado-4;
 }
 
 /*CARD LOGROS*/
-.perfil-logros{
+.perfil-logros {
   width: 461.6px;
   height: 341.6px;
 }
-#logros .encabezado{
+#logros .encabezado {
   justify-content: space-between;
 }
 .circle-logro {
   width: 95px;
   height: 95px;
-  background-color: #1E4DA9;
+  background-color: #1e4da9;
   border-radius: 50%;
 }
 .circle-logro2 {
   width: 95px;
   height: 95px;
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
   border-radius: 50%;
   margin-left: 20px;
 }
-#logros div a{
+#logros div a {
   text-decoration: none;
 }
-#logros div img{
+#logros div img {
   width: 30px;
   height: 30px;
   margin-top: 4px;
 }
-#logros div p{
+#logros div p {
   padding-left: 20px;
   font-weight: bold;
 }
@@ -424,6 +424,74 @@
   border-radius: 54px;
   color: white;
   margin: 0 25px;
+}
+
+/*  ESTILOS HOME PRACTICANTE*/
+#home-practicante {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 100px;
+  grid-row-gap: 50px;
+}
+
+.home-head {
+  padding: 2px 0 2px 20px;
+  background-color: #54af0c;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  color: white;
+}
+
+.home-title {
+  font-size: 20px;
+  font-weight: bold;
+  color: #1e4da9;
+}
+
+#home-practicante .festividades .festividades-image {
+  width: 345px;
+  height: 278px;
+  margin: 0 auto 30px;
+  background-color: #d9d9d9;
+}
+
+#home-practicante .festividades .festividades-description {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+#home-practicante .festividades .festividades-btns {
+  display: flex;
+}
+
+#home-practicante .festividades .festividades-btns div {
+  width: 40px;
+  height: 40px;
+  background-color: #d9d9d9;
+  margin: 0px 15px 0;
+}
+
+#home-practicante .anuncios {
+  margin-bottom: 60px;
+}
+
+#home-practicante .calendario {
+  text-align: right;
+}
+
+#home-practicante .calendario div {
+  width: 450px;
+  height: 300px;
+  background-color: #f9f9f9;
+  border-radius: 20px;
+  padding: 10px;
+  text-align: center;
+}
+
+#home-practicante .calendario .calendario-mes {
+  font-size: 25px;
+  color: #1e4da9;
+  border-bottom: 1px solid #1e4da9;
 }
 
 /*pantallas*/
@@ -443,7 +511,7 @@
   .posicion-perfil {
     margin-left: 20px;
   }
-  .aside-modelo{
+  .aside-modelo {
     position: static;
     margin-left: 230px;
     top: unset;
@@ -459,7 +527,7 @@
     padding-top: 20px;
     min-height: 0;
   }
- 
+
   .nav-items {
     margin-left: 22%;
     margin-right: 20%;
@@ -470,10 +538,10 @@
   .nav-items a {
     margin: 5px;
   }
-  .salir{
+  .salir {
     margin-top: 15px;
   }
-  .navbar>.container-fluid{
+  .navbar > .container-fluid {
     justify-content: center;
   }
 }
@@ -492,7 +560,7 @@
   .posicion-perfil {
     margin-left: 20px;
   }
-  .aside-modelo{
+  .aside-modelo {
     position: static;
     margin-left: 0;
     top: unset;
@@ -508,7 +576,7 @@
     padding-top: 20px;
     min-height: 0;
   }
- 
+
   .nav-items {
     margin-left: 25%;
     margin-right: 12%;
@@ -519,16 +587,16 @@
   .nav-items a {
     margin: 5px;
   }
-  .salir{
+  .salir {
     margin-top: 15px;
   }
-  .navbar>.container-fluid{
+  .navbar > .container-fluid {
     justify-content: center;
   }
 }
 
 @media (min-width: 1024px) and (max-width: 2560px) {
-  .posicion{
+  .posicion {
     margin-left: 25%;
     margin-right: 5%;
   }
