--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,129 +4,96 @@ body{
   background-position: left top;
   background-attachment: fixed;
 }
-*{
-  font-family: 'Poppins', sans-serif;
-}
-
 .formulario {
-    background: rgba(0, 0, 0, .1);
-    padding: 20px;
-    border-radius: 10px;
-    color: white;
-    border: 2px solid #fff;
-    box-shadow: inset 0 0 5px #00CC99, 0 0 10px #00CC99;
+  background: rgba(0, 0, 0, .1);
+  padding: 20px;
+  border-radius: 10px;
+  color: white;
+  border: 2px solid #fff;
+  box-shadow: inset 0 0 5px #00CC99, 0 0 10px #00CC99;
 }
-
-.form-control {
-    background: rgba(0, 0, 0, .3);
-    transition: 0.5s ease-in;
-    outline: none;
-    color: white;
-    border: 2px solid #fff;
-}
-
-
-
-
-
-/*
-  0 0 30px rgba(0, 0, 0, 0.568);
-*/
-
 .ingresar:hover {
-    color: white;
+  color: white;
 }
-
 .olvide {
-    color: white;
-    text-decoration-style: none;
-    text-decoration-line: none;
+  color: white;
+  text-decoration-style: none;
+  text-decoration-line: none;
 }
-
 .olvide:hover {
-    color: white;
-    text-decoration-style: none;
-    text-decoration-line: none;
-    cursor: pointer;
+  color: white;
+  text-decoration-style: none;
+  text-decoration-line: none;
+  cursor: pointer;
 }
-
 .olvide1 {
-    color: white;
-    text-decoration-style: none;
-    text-decoration-line: none;
-    font-size: 20px;
-    font-weight: 700!important;
-    /* border: 2px solid white; */
-    padding: 10px;
-    border-radius: 10px;
-    background: rgba(0, 0, 0, .5);
+  color: white;
+  text-decoration-style: none;
+  text-decoration-line: none;
+  font-size: 20px;
+  font-weight: 700!important;
+ /* border: 2px solid white;
+  */
+  padding: 10px;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, .5);
 }
-
 .olvide1:hover {
-    color: white;
-    text-decoration-style: none;
-    text-decoration-line: none;
-    cursor: pointer;
+  color: white;
+  text-decoration-style: none;
+  text-decoration-line: none;
+  cursor: pointer;
 }
-
-
-
-        .cont-reloj{
-            margin: 170px auto;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 220px;
-            width: 40%;
-            border: 6px solid #fff;
-            background: #e5e5e5;
-            box-shadow:  -13px -13px 13px #fff, 
-             15px 15px 15px rgba(13,39,80,.26),
-            inset -13px -13px 13px #fff, 
-            inset 15px 15px 15px rgba(13,39,80,.26);
-             border-radius:30px;
-             font-weight: bold;
-             font-family: sans-serif;
-             color: #00CC99;
-        }
-        .reloj{
-          font-size:4.7em;  
-        }
-        .datos{
-            font-size: 2.5em;
-            font-family: 'Courier New', Courier, monospace;
-        }
-
+.cont-reloj{
+  margin: 170px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 220px;
+  width: 40%;
+  border: 6px solid #fff;
+  background: #e5e5e5;
+  box-shadow: -13px -13px 13px #fff, 15px 15px 15px rgba(13,39,80,.26), inset -13px -13px 13px #fff, inset 15px 15px 15px rgba(13,39,80,.26);
+  border-radius:30px;
+  font-weight: bold;
+  font-family: sans-serif;
+  color: #00CC99;
+}
+.reloj{
+  font-size:4.7em;
+}
+.datos{
+  font-size: 2.5em;
+  font-family: 'Courier New', Courier, monospace;
+}
 @media only screen and (max-width: 1200px) {
   .cont-reloj{
-    width:50%;
-  }
+      width:50%;
+ }
 }
-
 @media only screen and (max-width: 960px) {
   .cont-reloj{
-    width:60%;
-  }
+      width:60%;
+ }
 }
 @media only screen and (max-width: 870px) {
   .cont-reloj{
-    width:65%;
-  }
+      width:65%;
+ }
 }
 @media only screen and (max-width: 400px) {
   .cont-reloj{
-    width:85%;
-    height:150px;
-  }
-   .reloj{
-            font-size:2.8em;  
-        }
+      width:85%;
+      height:150px;
+ }
+  .reloj{
+      font-size:2.8em;
+ }
   .datos{
-    font-size:1.3em
-    }
+      font-size:1.3em 
+ }
 }
-
 .asistencia{
   background-color: rgba(255, 255, 255, 0);
   width: 100vw;
@@ -260,7 +227,6 @@ body{
   margin-bottom: 0;
   margin-bottom: 10px;
 }
-
 /*Ingreso*/
 .asistencia__contend2{
   background-color: #ffffff87;
@@ -352,7 +318,6 @@ body{
 .img_alert{
   width: 100px;
 }
-
 /*plantilla*/
 .plantilla{
   background-color: #1e3c8fd5;
@@ -436,8 +401,6 @@ body{
 .container__tittle{
   font-size: 2em;
 }
-
-
 .nontaine__nuevo{
   display: flex;
   justify-content: space-between;
@@ -482,17 +445,14 @@ body{
 .center__contend::-webkit-scrollbar {
   width: 16px;
 }
-
 .center__contend::-webkit-scrollbar-track {
   background: #ffffff00;
 }
-
 .center__contend::-webkit-scrollbar-thumb {
   background-color: #2f34bc;
   border-radius: 10px;
   border: 3px solid #ffffff;
 }
-
 .container__sd{
   text-align: center;
 }
@@ -534,14 +494,12 @@ body{
   position: absolute;
   visibility: hidden;
 }
-
 .cambiar__fondo{
   position: absolute;
   top: 40px;
   right: 40px;
   border-radius: 30px;
 }
-
 /*Modal-fondo*/
 .modal-fondo{
   width: 100%;
@@ -591,11 +549,9 @@ body{
 .modal-fondo__fondos::-webkit-scrollbar {
   width: 16px;
 }
-
 .modal-fondo__fondos::-webkit-scrollbar-track {
   background: #ffffff00;
 }
-
 .modal-fondo__fondos::-webkit-scrollbar-thumb {
   background-color: #2f34bc;
   border-radius: 10px;
