--- a/css/estilos_practicante.css
+++ b/css/estilos_practicante.css
@@ -130,6 +130,8 @@
                          "estado estadistica-desempeño"
                          "estado logros"; 
     gap: 20px;
+    margin-left: 240px; 
+    margin-top: 30px;
   }
   #perfil{
     grid-area: perfil;
@@ -243,7 +245,7 @@
 /*OTRO DISEÑO*/
 .card {
   background-color: white;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 4px 4px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
   padding: 20px;
 }
@@ -432,7 +434,7 @@
 /*pantallas*/
 /* Estilos generales aquí */
 
-@media (max-width: 768px) {
+@media (max-width: 576px) {
   .nav-modelo {
     margin-left: 0;
   }
@@ -479,6 +481,116 @@
   .navbar>.container-fluid{
     justify-content: center;
   }
+
+  #grid-perfil {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: "perfil" 
+                        "estadistica-desempeño" 
+                        "estado" 
+                        "logros";
+    gap: 20px;
+    margin-left: 0px;
+  }
+  .estilo-card-perfil{
+    display: initial !important;
+    width: 270px;
+    height: 364px;
+    background-image: url(../images/cielo2.webp);
+  }
+  .tarjeta-perfil div p{
+    width: 250px;
+    margin-top: 38px;
+    margin-bottom: 0px;
+  }
+  .perfil-presentacion{
+    padding-top: 0px;
+    display: initial !important;
+    padding-left: 25px;
+  }
+  .tipo-job{
+    margin-left: 30px !important;
+  }
+  .perfil-contrato{
+    display: initial !important;
+  }
+  .diseñoFechaIngreso{
+    margin-left: 30px;
+  }
+  .diseñoFechaSalida{
+    margin-left: 35px;
+    margin-top: 8px;
+  }
+  .contenedor-fecha{
+    margin-left: 30px !important;
+    margin-right: 0px;
+  }
+  .perfil-yuntas{
+    margin-top: -180px;
+    margin-left: 90px;
+  }
+}
+@media (min-width: 576px) and (max-width: 767px) {
+  .nav-modelo {
+    margin-left: 0;
+  }
+  .posicion {
+    margin-left: 100px;
+  }
+  .diseño-escribir-aqui {
+    justify-content: center;
+    width: auto;
+  }
+  .posicion-perfil {
+    margin-left: 20px;
+  }
+  .aside-modelo{
+    position: static;
+    margin-left: 230px;
+    top: unset;
+    left: unset;
+    width: 100%;
+    justify-content: initial;
+    height: initial;
+  }
+  .main-sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+    min-height: 0;
+  }
+ 
+  .nav-items {
+    margin-left: 22%;
+    margin-right: 20%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+  }
+  .nav-items a {
+    margin: 5px;
+  }
+  .salir{
+    margin-top: 15px;
+  }
+  .navbar>.container-fluid{
+    justify-content: center;
+  }
+
+  #grid-perfil {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: "perfil" 
+                        "estadistica-desempeño" 
+                        "estado" 
+                        "logros";
+    gap: 20px;
+    margin-left: 0px;
+  }
+  
 }
 
 @media (min-width: 767px) and (max-width: 1023px) {
