--- a/css/estilos_practicante.css
+++ b/css/estilos_practicante.css
@@ -267,8 +267,196 @@
   margin-bottom: 0;
 }
 .ver-mas{
-  padding-left: 97px;
-  padding-top: 9px;
+  padding-left: 10px;
+  background-color: #54AF0C;
+  width: 110px;
+  height: 25px;
+  border-radius: 10px;
+  margin-left: 85px;
+  margin-top: 9px;
+}
+.ver-mas a{
+  text-decoration: none;
+}
+#flower-graphic {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+  grid-template-areas: 
+    "flower-body graph-legend"
+    "average-note average-note";
+}
+#flower-body{
+  grid-area: flower-body;
+  width: 268px;
+}
+#graph-legend{
+  grid-area: graph-legend;
+  width: 155px;
+  align-self: center;
+}
+#average-note{
+  grid-area: average-note;
+  text-align: center;
+  background-color: #1e3d8f;
+  border-radius: 10px;
+  height: 25px;
+  width: 150px;
+  margin-left: 30%;
+}
+.nota-flower1 {
+  position: absolute;
+  top: 50%;
+  left: 33%;
+  transform: translate(-50%, -93%);
+  z-index: 1;
+}
+
+.flower-body-1 {
+  width: 200px;
+  height: 200px;
+  position: relative;
+  overflow: hidden;
+  left: -9px;
+  transform: rotate(90deg) translateX(-13%);
+}
+.nota-flower2 {
+  position: absolute;
+  top: 73%;
+  left: 17%;
+  transform: translate(-50%, -93%);
+  z-index: 1;
+}
+.flower-body-2 {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  overflow: hidden;
+  top: calc(100% - 168px);
+  left: calc(50% - 100px - 140px);
+  transform: rotate(356deg);
+}
+.nota-flower3 {
+  position: absolute;
+  top: 73%;
+  left: 48%;
+  transform: translate(-50%, -93%);
+  z-index: 1;
+}
+.flower-body-3 {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  overflow: hidden;
+  transform: rotate(183deg);
+  top: calc(100% - 249px);
+  left: calc(50% - 113px);
+}
+.petal-1-1 {
+  width: 90px;
+  height: 120px;
+  background-color: #00D7C9;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%) rotate(270deg);
+  clip-path: polygon(0 0, 160% 0, 100% 50%, 93% 70%, 50% 100%, 9% 70%, 0 50%);
+  border-radius: 50%;
+}
+.petal-1-2 {
+  width: 61px;
+  height: 43px;
+  margin-left: 71px;
+  margin-top: 14.4px;
+  border-radius: 50%;
+  background-color: #00D7C9;
+}
+.petal-1-3 {
+  width: 41px;
+  height: 22px;
+  margin-left: 84px;
+  margin-top: 25px;
+  border-radius: 50%;
+  background-color:#00D7C9;
+}
+
+.petal-2-1 {
+  width: 90px;
+  height: 120px;
+  background-color: #1E4DA9;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%) rotate(270deg);
+  clip-path: polygon(0 0, 160% 0, 100% 50%, 93% 70%, 50% 100%, 9% 70%, 0 50%);
+  border-radius: 50%;
+}
+.petal-2-2 {
+  width: 49px;
+  height: 35px;
+  margin-left: 80px;
+  margin-top: 14px;
+  border-radius: 50%;
+  background-color: #1E4DA9;
+}
+.petal-2-3 {
+  width: 50px;
+  height: 53px;
+  margin-left: 80px;
+  margin-top: 3px;
+  border-radius: 50%;
+  background-color: #1E4DA9;
+}
+.petal-3-1 {
+  width: 90px;
+  height: 120px;
+  background-color: #54AF0C;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%) rotate(270deg);
+  clip-path: polygon(0 0, 160% 0, 100% 50%, 93% 70%, 50% 100%, 9% 70%, 0 50%);
+  border-radius: 50%;
+}
+.petal-3-2 {
+  width: 49px;
+  height: 35px;
+  margin-left: 80px;
+  margin-top: 14px;
+  border-radius: 50%;
+  background-color: #54AF0C;
+}
+.petal-3-3 {
+  width: 50px;
+  height: 53px;
+  margin-left: 80px;
+  margin-top: 3px;
+  border-radius: 50%;
+  background-color: #54AF0C;
+}
+.square-legend-1 {
+  width: 20px;
+  height: 20px;
+  background-color: #1E4DA9;
+  display: inline-block;
+  margin-right: 10px;
+}
+.square-legend-2 {
+  width: 20px;
+  height: 20px;
+  background-color: #00D7C9;
+  display: inline-block;
+  margin-right: 10px;
+}
+.square-legend-3 {
+  width: 20px;
+  height: 20px;
+  background-color: #54AF0C;
+  display: inline-block;
+  margin-right: 10px;
+}
+#average-note h6{
+  margin-top: 3px;
 }
 /*CARD ESTADO PERFIL */
 .perfil-estado-perfil{
@@ -396,6 +584,12 @@
   height: 95px;
   background-color: #1E4DA9;
   border-radius: 50%;
+}
+.imagen-logro{
+  width: 120px !important;
+  height: 120px !important;
+  padding-bottom: 30px;
+  padding-right: 20px;
 }
 .circle-logro2 {
   width: 95px;
